Refactored scalar, swar, and SIMD implementations. Simplified FTLStream/FTLParser usage. Fixed tests to accomodate. NOTE- tests of individual implementations not yet implemented. Also documentation not fully updated.